[tool.poetry]
name = "cave-miner"
version = "2.0.0"
description = ""
authors = ["Antonin Deniau <antonin.deniau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kaitaistruct = "^0.10"
docopt = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
